<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="2dp"
        app:cardPreventCornerOverlap="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/CalendarWeekDays"
                    android:text="@string/weekday_1" />

                <TextView
                    style="@style/CalendarWeekDays"
                    android:text="@string/weekday_2" />

                <TextView
                    style="@style/CalendarWeekDays"
                    android:text="@string/weekday_3" />

                <TextView
                    style="@style/CalendarWeekDays"
                    android:text="@string/weekday_4" />

                <TextView
                    style="@style/CalendarWeekDays"
                    android:text="@string/weekday_5" />

                <TextView
                    style="@style/CalendarWeekDays"
                    android:text="@string/weekday_6" />

                <TextView
                    style="@style/CalendarWeekDays"
                    android:text="@string/weekday_7" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/daysRV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</FrameLayout>